<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDrawerBackground"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:paddingBottom="25dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/google_sans"
        android:gravity="center_horizontal"
        android:text="@string/bottom_sheet_header"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="84dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/google_sans"
        android:gravity="center_horizontal|fill_horizontal"
        android:text="@string/bottom_sheet_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="15dp"
        android:background="#447e7e7e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/text_times_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|fill_horizontal"
        android:paddingTop="20dp"
        android:text="@string/time_item1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/text_times_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|fill_horizontal"
        android:text="@string/time_item2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_times_1"
        app:layout_constraintTop_toBottomOf="@+id/text_times_1" />

    <TextView
        android:id="@+id/text_times_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|fill_horizontal"
        android:text="@string/time_item3"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_times_2"
        app:layout_constraintTop_toBottomOf="@+id/text_times_2" />

    <TextView
        android:id="@+id/text_times_4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|fill_horizontal"
        android:text="@string/time_item4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_times_3"
        app:layout_constraintTop_toBottomOf="@+id/text_times_3" />

    <TextView
        android:id="@+id/text_times_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|fill_horizontal"
        android:text="@string/time_item5"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_times_4"
        app:layout_constraintTop_toBottomOf="@+id/text_times_4" />

    <TextView
        android:id="@+id/text_times_6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal|fill_horizontal"
        android:text="@string/time_item6"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_times_5"
        app:layout_constraintTop_toBottomOf="@+id/text_times_5" />
</androidx.constraintlayout.widget.ConstraintLayout>
